src/log.txt
g++ -MM -MP -MT ../build/debug/drivers/rpi/dmascheduler.o -MT drivers/rpi/dmascheduler.d -std=c++0x -pthread -fpermissive -I/home/colin/proj/3dprinter/printipi/code/firmware/src -Wall -Wextra -Wwrite-strings -Wno-unused-result -Wno-pmf-conversions -DDNO_LOG_M105   -flto  -fno-signaling-nans -fno-rounding-math -fno-signed-zeros -freciprocal-math -fno-math-errno  -march=native -mtune=native -DMACHINE=KosselPi -DMACHINE_PATH='"drivers/machines/kosselpi.h"' -DDTARGET_RPI=0 -O0 -ggdb3 -fno-omit-frame-pointer drivers/rpi/dmascheduler.cpp > drivers/rpi/dmascheduler.d
g++ -c -o ../build/debug/drivers/rpi/dmascheduler.o drivers/rpi/dmascheduler.cpp -std=c++0x -pthread -fpermissive -I/home/colin/proj/3dprinter/printipi/code/firmware/src -Wall -Wextra -Wwrite-strings -Wno-unused-result -Wno-pmf-conversions -DDNO_LOG_M105   -flto  -fno-signaling-nans -fno-rounding-math -fno-signed-zeros -freciprocal-math -fno-math-errno  -march=native -mtune=native -DMACHINE=KosselPi -DMACHINE_PATH='"drivers/machines/kosselpi.h"' -DDTARGET_RPI=0 -O0 -ggdb3 -fno-omit-frame-pointer
In file included from drivers/rpi/dmascheduler.cpp:1:0:
drivers/rpi/dmascheduler.h:460:34: warning: unused parameter ‘pin’ [-Wunused-parameter]
         inline bool canDoPwm(int pin) const {
                                  ^
In file included from drivers/rpi/dmascheduler.cpp:16:0:
/home/colin/proj/3dprinter/printipi/code/firmware/src/schedulerbase.h:95:31: warning: unused parameter ‘pin’ [-Wunused-parameter]
      inline bool canDoPwm(int pin) const {
                               ^
/home/colin/proj/3dprinter/printipi/code/firmware/src/schedulerbase.h:98:31: warning: unused parameter ‘pin’ [-Wunused-parameter]
      inline void queuePwm(int pin, float ratio) {
                               ^
/home/colin/proj/3dprinter/printipi/code/firmware/src/schedulerbase.h:98:42: warning: unused parameter ‘ratio’ [-Wunused-parameter]
      inline void queuePwm(int pin, float ratio) {
                                          ^
drivers/rpi/dmascheduler.cpp: In constructor ‘drv::rpi::DmaScheduler::DmaMem::DmaMem(const drv::rpi::DmaScheduler&, std::size_t)’:
drivers/rpi/dmascheduler.cpp:84:20: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
     for (int i=0; i<numPages; ++i) {
                    ^
In file included from drivers/rpi/dmascheduler.cpp:17:0:
drivers/rpi/dmascheduler.cpp: In member function ‘void drv::rpi::DmaScheduler::initSrcAndControlBlocks()’:
/home/colin/proj/3dprinter/printipi/code/firmware/src/common/logging.h:44:26: warning: format ‘%x’ expects argument of type ‘unsigned int’, but argument 2 has type ‘uintptr_t {aka long unsigned int}’ [-Wformat=]
    printf(format, ## args); \
                          ^
drivers/rpi/dmascheduler.cpp:165:5: note: in expansion of macro ‘LOGV’
     LOGV("DmaScheduler::initSrcAndControlBlocks mappedPhysSrcPage: %08x\n", virtToPhys(virtSrcPage));
     ^
/home/colin/proj/3dprinter/printipi/code/firmware/src/common/logging.h:36:26: warning: format ‘%i’ expects argument of type ‘int’, but argument 2 has type ‘size_t {aka long unsigned int}’ [-Wformat=]
    printf(format, ## args); \
                          ^
drivers/rpi/dmascheduler.cpp:191:5: note: in expansion of macro ‘LOG’
     LOG("DmaScheduler::initSrcAndControlBlocks: #dma blocks: %i, #src blocks: %i\n", numSrcBlocks*3, numSrcBlocks);
     ^
/home/colin/proj/3dprinter/printipi/code/firmware/src/common/logging.h:36:26: warning: format ‘%i’ expects argument of type ‘int’, but argument 3 has type ‘size_t {aka long unsigned int}’ [-Wformat=]
    printf(format, ## args); \
                          ^
drivers/rpi/dmascheduler.cpp:191:5: note: in expansion of macro ‘LOG’
     LOG("DmaScheduler::initSrcAndControlBlocks: #dma blocks: %i, #src blocks: %i\n", numSrcBlocks*3, numSrcBlocks);
     ^
drivers/rpi/dmascheduler.cpp: In member function ‘void drv::rpi::DmaScheduler::initDma()’:
drivers/rpi/dmascheduler.cpp:319:45: error: ‘cbArrCached’ was not declared in this scope
     uint32_t firstAddr = virtToUncachedPhys(cbArrCached);
                                             ^
In file included from drivers/rpi/dmascheduler.cpp:17:0:
drivers/rpi/dmascheduler.cpp: In member function ‘void drv::rpi::DmaScheduler::queue(int, int, uint64_t)’:
/home/colin/proj/3dprinter/printipi/code/firmware/src/common/logging.h:44:26: warning: format ‘%lli’ expects argument of type ‘long long int’, but argument 2 has type ‘int64_t {aka long int}’ [-Wformat=]
    printf(format, ## args); \
                          ^
drivers/rpi/dmascheduler.cpp:352:5: note: in expansion of macro ‘LOGV’
     LOGV("Timing diff: %lli\n", (curTimeAtFrame0-_lastTimeAtFrame0)%FRAME_TO_USEC(SOURCE_BUFFER_FRAMES));
     ^
/home/colin/proj/3dprinter/printipi/code/firmware/src/common/logging.h:44:26: warning: format ‘%lli’ expects argument of type ‘long long int’, but argument 2 has type ‘int64_t {aka long int}’ [-Wformat=]
    printf(format, ## args); \
                          ^
drivers/rpi/dmascheduler.cpp:363:9: note: in expansion of macro ‘LOGV’
         LOGV("DmaScheduler behind schedule: %lli uSec (tries: %i) (event at %llu; got %llu)\n", usecFromNow, tries, micros, std::chrono::duration_cast<std::chrono::microseconds>(curTime2.time_since_epoch()).count()); //Note: have to use verbose logging, otherwise the log message will slow the app down and cause even more scheduling woes.
         ^
/home/colin/proj/3dprinter/printipi/code/firmware/src/common/logging.h:44:26: warning: format ‘%llu’ expects argument of type ‘long long unsigned int’, but argument 4 has type ‘uint64_t {aka long unsigned int}’ [-Wformat=]
    printf(format, ## args); \
                          ^
drivers/rpi/dmascheduler.cpp:363:9: note: in expansion of macro ‘LOGV’
         LOGV("DmaScheduler behind schedule: %lli uSec (tries: %i) (event at %llu; got %llu)\n", usecFromNow, tries, micros, std::chrono::duration_cast<std::chrono::microseconds>(curTime2.time_since_epoch()).count()); //Note: have to use verbose logging, otherwise the log message will slow the app down and cause even more scheduling woes.
         ^
/home/colin/proj/3dprinter/printipi/code/firmware/src/common/logging.h:44:26: warning: format ‘%llu’ expects argument of type ‘long long unsigned int’, but argument 5 has type ‘std::chrono::duration<long int, std::ratio<1l, 1000000l> >::rep {aka long int}’ [-Wformat=]
    printf(format, ## args); \
                          ^
drivers/rpi/dmascheduler.cpp:363:9: note: in expansion of macro ‘LOGV’
         LOGV("DmaScheduler behind schedule: %lli uSec (tries: %i) (event at %llu; got %llu)\n", usecFromNow, tries, micros, std::chrono::duration_cast<std::chrono::microseconds>(curTime2.time_since_epoch()).count()); //Note: have to use verbose logging, otherwise the log message will slow the app down and cause even more scheduling woes.
         ^
make: *** [../build/debug/drivers/rpi/dmascheduler.o] Error 1
